[package]
edition = "2021"
name = "pic-on-serial"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32l072cz to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "stm32f446re", "unstable-pac", "time-driver-any", "exti", "memory-x"]  }
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3"
defmt-rtt = "0.4"

embedded-storage = "0.3.1"
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
embedded-hal = "0.2.6"
static_cell = { version = "2" }
md5-rs = "0.1.5"
display-interface = { version = "0.4" }
embedded-graphics = "0.7.1"

[dependencies.embedded-graphics-core]
version = "0.3"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[dependencies.ili9325]
version = "0.1.0"
path = "../rust-ili9325"

[dependencies.cortex-m-semihosting]
version = "0.5.0"

[dependencies.tinybmp]
version = "0.3.1"

[profile.release]
debug = 2
